--- a/src/index.html
+++ b/src/index.html
@@ -187,11 +187,11 @@
     <!-- Section 5 -->
      <div class="w-full h-auto my-[20px] flex justify-center items-center gap-[0px_10px] flex-wrap">
           <div class="w-[400px] h-[470px]">
-            <img src="./photo/food delivery 4.svg" class470px[100%] h-[100%]" alt="">
+            <img src="./photo/food delivery 4.svg" class="470px[100%] h-[100%]" alt="">
           </div>
           <div class="w-[400px] h-[470px] pl-[10px] flex flex-col justify-center items-center space-y-4">
             <div class="text-4xl font-bold text-[#363853]"><span class="text-[#FF7A50]">Stay</span> at home, we will Provide <span class="text-[#FF7A50]">good food</span> </div>
-            <div class="text-[#363853] text-xl">We provide tasty food and superfast delivery at your home.  Let’s use our services right now and get discounts of up to 50%.</div>
+            <div class="text-[#363853] text-xl px-[8px]">We provide tasty food and superfast delivery at your home.  Let’s use our services right now and get discounts of up to 50%.</div>
             <div class="list flex flex-col gap-[15px_0px]">
               <div class="list1 flex justify-start items-center">
                 <div class=""><img src="./photo/e1.svg" alt=""></div>
@@ -321,7 +321,7 @@
       <div class="w-[400px] h-[470px] pl-[10px] flex flex-col justify-center items-center space-y-4 md:order-3">
          
         <div class="text-4xl font-bold text-[#363853]">Download  Our <span class="text-[#FF7A50]"> Mobile App </span></div>
-        <div class="text-[#363853]">It's all at your fingertips -- the restaurants you love. Find the right food to suit your mood, and make the first bite last. Go ahead, download app and get 50% discount</div>
+        <div class="text-[#363853] px-[8px]">It's all at your fingertips -- the restaurants you love. Find the right food to suit your mood, and make the first bite last. Go ahead, download app and get 50% discount</div>
         <div class="flex justify-center items-center gap-[10px]">
           <div class=""><img src="./photo/Store=App Store, Style=Black.svg" alt=""></div>
           <div class=""><img src="./photo/Store=Google Play, Style=Black.svg" alt=""></div>
@@ -341,7 +341,7 @@
       <div class="w-[400px] h-auto">
         <img src="./photo/Rectangle 8.svg" class="w-[100%] h-[100%]" alt="">
       </div>
-      <div class="w-[400px] h-auto pl-[15px] flex flex-col justify-center items-center space-y-4">
+      <div class="w-[400px] h-auto pl-[15px] flex flex-col justify-center items-center space-y-4 px-[11px]">
       
         <div class="text-left text-[#363853]"><span class="text-3xl"><i class="ri-double-quotes-l"></i></span> EFood has the most intriguing food order system in the country. UI in both their app and web Is very simple and easy to use, enhancing the UX. Their delivery men are also quite professional and knows the neighborhood well. Till now I never had to guide them to my address for delivery <span class="text-3xl"><i class="ri-double-quotes-r"></i></span> </div>
   
